--- a/Sweet.html/style.css
+++ b/Sweet.html/style.css
@@ -63,3 +63,20 @@ section{
 }.oi{
     color: rgb(73, 64, 196);
 }
+.flexble-containar{
+    
+    margin-bottom: 100px;
+}.hal{
+width: 75%;
+ padding-right: 50px;
+ padding: 50px;
+ padding-left: 6%;
+ border-radius: 4%;
+ box-shadow: violet 20000%;
+ 
+ 
+ 
+ 
+ background-image: url(3.jpg);
+
+}
